--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -2,3 +2,4 @@
 @import url('./_card-list.css');
 @import url('./_robot-card.css');
 @import url('./_panels.css');
+@import url('./_robot-details.css');
