--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3,3 +3,5 @@
 @import url('./_robot-card.css');
 @import url('./_panels.css');
 @import url('./_robot-details.css');
+@import url('./_robot-page.css');
+@import url('./_container.css');
