--- a/dev/css/_robot-details.css
+++ b/dev/css/_robot-details.css
@@ -22,6 +22,10 @@
   width: 10em;
 }
 
+.robot-details a {
+  color: inherit;
+}
+
 .robot-details input {
   border: 0;
   background-color: rgba(255, 255, 255, 0.5);
